message AlarmInfo
{
    required int32 id = 1;
    required int32 obj_type = 2;
    required int32 timestamp = 3;
    required int32 x = 4;
    required int32 y = 5;
    required int32 w = 6;
    required int32 h = 7;
    required int32 start_timestamp = 8;
    required int32 end_timestamp = 9;
    required float credibility = 10;
    optional bytes src_image = 11;
    optional bytes alarm_pic = 12;
    optional bytes alarm_vid = 13;
    required int32 image_width = 14;
    required int32 image_height = 15;
    required int32 image_id = 16;
}
